GloablServices/keshavglobal/force-app/main/default/objects/Product_Service__c/Product_Service__c.object-meta.xml
<CustomObject>
    <label>Product Service</label>
    <nameField>
        <label>Product Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>