GloablServices/keshavglobal/force-app/main/default/objects/Product_Service__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service__c.Leaf_Node__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Product Services</relationshipLabel>
    <relationshipName>Product_Services</relationshipName>
    <type>Lookup</type>
</CustomField>