GloablServices/keshavglobal/force-app/main/default/objects/Product_Service__c/fields/Service_Level_1__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Level 1</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Product Services (Service Level 1)</relationshipLabel>
    <relationshipName>Product_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>