GloablServices/keshavglobal/force-app/main/default/objects/Product_Service__c/fields/Service_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Level 2</label>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Product Services (Service Level 2)</relationshipLabel>
    <relationshipName>Product_Services2</relationshipName>
    <type>Lookup</type>
</CustomField>