GloablServices/keshavglobal/force-app/main/default/objects/Product_Service__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Product__c</columns>
    <columns>Service__c</columns>
    <columns>Service_Level_1__c</columns>
    <columns>Service_Level_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>